--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
-    <h1>ola</h1>
-    <img src="./images/chocolate-cake.png" alt="">
-    <img src="./images/baloom.jpg" alt="">
+    <header class="hero">
+        <div class="container">
+            <img class="hero__bolo" src="./images/chocolate-cake.png" alt="bolo chocolate">
+            <p class="hero__text">
+                O Maior aniversário começa em: 10d 12h 30m 15s
+            </p>
+        </div>
+    </header>
     <script src="scripts/main.js"></script>
 </body>
 </html>
